<resources>
    <string name="app_name">Home Hub</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_message">Hello! This app uses bluetooth smart and
        WiFi Near service Discovery (NSD) to control 433/315Mhz appliances.\n\nTap "Server" to
        activate bluetooth and search for compatible bluetooth hosts and set up an NSD server,
        or "Client" to connect to an existing NSD server.</string>
    <string name="yes">Yes</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="initialize">Initialize</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_attempt">Attempting to turn on Bluetooth&#8230;</string>
    <string name="bt_already_on">Bluetooth is already on.</string>
    <string name="bt_turned_on">Bluetooth was successfully turned on.</string>
    <string name="bt_denied">It\'s either you denied the bluetooth request,
        or there is a problem with your bluetooth adapter. Please try again later.</string>
    <string name="button_scan">Scan</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="device_name_address">%1$s\n%2$s</string>
    <string name="rename_server">Rename</string>
    <string name="restart_server">Restart</string>
    <string name="stop_server">Stop</string>
    <string name="switches">Switches</string>
    <string name="sniff_code">Sniff %1$s Code</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="undo">undo</string>
    <string name="deleted_switch">Deleted switch</string>
    <string name="connection_state">Connection State: %1$s</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="connecting_to">Connecting to %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="host">Host</string>
    <string name="history">History</string>
    <string name="devices">Devices</string>
    <string name="devices_selected">%1$d selected</string>
    <string name="edit_device">Edit Device</string>
    <string name="create_group">Create Group</string>
    <string name="rename_switch">Rename Switch</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="color_picker_choose">Choose Color</string>
    <string name="zigbee_command_arguments_title">Command: %1$s</string>
    <string name="zigbee_command_arguments_description">Description: %1$s</string>
    <string name="zigbee_create_group">Create ZigBee Group</string>
    <string name="zigbee_add_group">Add Group</string>
    <string name="switch_service">Switch service</string>
    <string name="switch_service_description">Service for maintaining switch connection</string>
    <string name="service_name">BLE Service</string>
    <string name="ble_service_new_connection">Trying to create a new connection…</string>
    <string name="ble_service_adapter_uninitialized">BluetoothAdapter not initialized</string>
    <string name="ble_service_reconnecting">Reconnecting to device</string>
    <string name="ble_service_failed_to_connect">Failed connection attempt.</string>
    <string name="ble_connected_nsd_server">Connected and hosting NSD server</string>
    <string name="server_nsd_service">Server NSD Service</string>
    <string name="client_nsd_service">Client NSD Service</string>
    <string name="connect">Connect</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh</string>
    <string name="in_server_mode">IN SERVER MODE</string>
    <string name="connection_title">Connecting</string>
    <string name="connection_text">Please wait…</string>
    <string name="ok">Okay</string>
    <string name="name_nsd_service">Name NSD Service</string>
    <string name="connected_to_server">Connected to switch server</string>
    <string name="started_server_service">Switch service running</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_forget">Forget Device</string>
    <string name="menu_ping_server">Ping Server</string>
    <string name="menu_forget_server">Forget Server</string>
    <string name="menu_start_nsd">Start Wifi Service</string>
    <string name="menu_restart_nsd">Restart Wifi Service</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="commsprotocol_bye">Bye</string>
    <string name="proxyprotocol_ping_response">Please choose an option;\n1. Set up a remote device to connect to the ble sniffer\n2. Control a remote device to find and toggle switches\n3. Knock-Knock jokes</string>
    <string name="proxyprotocol_invalid_command">Invalid command. Please choose the server you want, Knock Knock jokes, or an RC Remote</string>
    <string name="blercprotocol_ping_response">Welcome! Tap any of the switches to control them</string>
    <string name="blercprotocol_no_such_switch_response">Switch does not exist</string>
    <string name="blercprotocol_refresh_response">Updated available switches</string>
    <string name="blercprotocol_transmission_response">Sending transmission</string>
    <string name="blercprotocol_refresh_switches_command">Refresh Switches</string>
    <string name="blercprotocol_renamed_response">Renamed %1$s to %2$s</string>
    <string name="blercprotocol_sniff_off_response">Sniffed off code</string>
    <string name="blercprotocol_sniff_on_response">Sniffed on code</string>
    <string name="blercprotocol_stop_sniff_response">Sniff ended</string>
    <string name="blercprotocol_start_sniff_response">Sniffing</string>
    <string name="blercprotocol_deleted_response">Deleted %1$s</string>
    <string name="blercprotocol_delete_command">Delete</string>
    <string name="blercprotocol_rename_command">Rename</string>
    <string name="wiredrcprotocol_invalid_command">Invalid Command</string>
    <string name="scanblercprotocol_device_name">Device: %1$s</string>
    <string name="scanblercprotocol_scan_response">Scan complete, found %1$d device(s)</string>
    <string name="scanblercprotocol_ping_reponse">Welcome! Tap scan to search for bluetooth hosts. Note that scanning is done in bouts of 5 seconds.</string>
    <string name="scanblercprotocol_sniff">Sniff</string>
    <string name="scanblercprotocol_start_scan_reponse">Scanning</string>
    <string name="scanblercprotocol_sniff_already_exists_response">This switch already exists</string>
    <string name="zigbeeprotocol_ping">Find and control ZigBee Devices</string>
    <string name="zigbeeprotocol_unavailable">No supported ZigBee drivers found</string>
    <string name="zigbeeprotocol_enter_args">Requesting arguments for %1$s</string>
    <string name="zigbeeprotocol_executing">Executing %1$s</string>
    <string name="zigbeeprotocol_forming_network">Forming network</string>
    <string name="zigbeeprotocol_saved_devices">Saved Devices</string>
    <string name="zigbeeprotocol_saved_devices_request">Requesting saved Devices</string>
    <string name="zigbeeprotocol_nodes">Nodes</string>
    <string name="zigbeeprotocol_endpoint">Endpoint</string>
    <string name="zigbeeprotocol_node">Node</string>
    <string name="zigbeeprotocol_bind">Bind</string>
    <string name="zigbeeprotocol_unbind">Unbind</string>
    <string name="zigbeeprotocol_bind_table">Bind Table</string>
    <string name="zigbeeprotocol_read">Read</string>
    <string name="zigbeeprotocol_write">Write</string>
    <string name="zigbeeprotocol_attsupported">Supported Attrs</string>
    <string name="zigbeeprotocol_cmdsupported">Supported Cmds</string>
    <string name="zigbeeprotocol_info">Info</string>
    <string name="zigbeeprotocol_join">Join</string>
    <string name="zigbeeprotocol_leave">Leave</string>
    <string name="zigbeeprotocol_reporting">Reporting</string>
    <string name="zigbeeprotocol_subscribe">Subscribe</string>
    <string name="zigbeeprotocol_unsubscribe">Unsubscribe</string>
    <string name="zigbeeprotocol_installkey">Install Key</string>
    <string name="zigbeeprotocol_linkkey">Link Key</string>
    <string name="zigbeeprotocol_netstart">Network Start</string>
    <string name="zigbeeprotocol_netbackup">Network Backup</string>
    <string name="zigbeeprotocol_discovery">Network Discovery</string>
    <string name="zigbeeprotocol_otaupgrade">OTA Upgrade</string>
    <string name="zigbeeprotocol_channel">Channel</string>
    <string name="zigbeeprotocol_on">On</string>
    <string name="zigbeeprotocol_off">Off</string>
    <string name="zigbeeprotocol_color">Color</string>
    <string name="zigbeeprotocol_level">Level</string>
    <string name="zigbeeprotocol_rediscover">Rediscover</string>
    <string name="zigbeeprotocol_add_group">Add Group</string>
    <string name="zigbeeprotocol_remove_group">Remove Groups</string>
    <string name="zigbeeprotocol_list_groups">List Groups</string>
    <string name="zigbeeprotocol_join_group">Join Group</string>
    <string name="zigbeeprotocol_leave_group">Leave Group</string>
    <string name="zigbeeprotocol_name_group">Name Group</string>
    <string name="zigbeeprotocol_joined_groups">Joined Groups</string>
    <string name="zigbeeprotocol_formnet">Form Network</string>
    <string name="knockknockprotocol_no">no</string>
    <string name="knockknockprotocol_yes">yes</string>
    <string name="knockknockprotocol_who">%1$s who?</string>
    <string name="knockknockprotocol_whos_there">Who\'s there?</string>
    <string name="knockknockprotocol_joke_start">Knock! Knock!</string>
    <string name="knockknockprotocol_want_another">%1$s Want another? (y/n)</string>
    <string name="knockknockprotocol_wrong_answer">You\'re supposed to say \"%1$s\"! Try again. Knock! Knock!"</string>
    <string-array
        name="knockknockProtocol_clues">
        <item>Turnip</item>
        <item>Little Old Lady</item>
        <item>Atch</item>
        <item>Who</item>
        <item>Who</item>
    </string-array>
    <string-array
        name="knockknockProtocol_answers">
        <item>Turnip the heat, it\'s cold in here!</item>
        <item>I didn\'t know you could yodel!</item>
        <item>Bless you!</item>
        <item>Is there an owl in here?</item>
        <item>Is there an echo in here?</item>
    </string-array>
</resources>