<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="100"
        android:title="@string/menu_connect"
        compat:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="101"
        android:title="@string/menu_disconnect"
        compat:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_start_nsd"
        android:orderInCategory="102"
        android:title="@string/menu_start_nsd"
        compat:showAsAction="never" />
    <item
        android:id="@+id/menu_forget"
        android:orderInCategory="103"
        android:title="@string/menu_forget"
        compat:showAsAction="never" />
</menu>