<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2019 Adetunji Dahunsi
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_connect"
        android:icon="@drawable/ic_connect_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_connect"
        compat:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_disconnect"
        android:icon="@drawable/ic_disconnect_24dp"
        android:orderInCategory="101"
        android:title="@string/menu_disconnect"
        compat:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="102"
        android:title="@string/refresh"
        compat:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_start_nsd"
        android:orderInCategory="103"
        android:title="@string/menu_start_nsd"
        compat:showAsAction="never" />
    <item
        android:id="@+id/menu_restart_nsd"
        android:orderInCategory="104"
        android:title="@string/menu_restart_nsd"
        compat:showAsAction="never" />
    <item
        android:id="@+id/menu_forget"
        android:orderInCategory="105"
        android:title="@string/menu_forget"
        compat:showAsAction="never" />
</menu>